--- a/Week02/01.PyTorch Basic.md
+++ b/Week02/01.PyTorch Basic.md
@@ -1,15 +1,41 @@
 # PyTorch Basic
 1. PyTorch 기본
-  - PyTorch의 기본과 딥러닝 프로젝트 구조에 대한 개념
+   : PyTorch의 기본과 딥러닝 프로젝트 구조에 대한 개념
 2. PyTorch 구조 학습 (1)
-  - PyTorch에서의 AutoGrad & Optimizer 그리고 Dataset과 DataLoader와 관련된 개념
+   : PyTorch에서의 AutoGrad & Optimizer 그리고 Dataset과 DataLoader와 관련된 개념
 3. PyTorch 구조 학습 (2)
-  - PyTorch에서 모델을 불러오고 여러 실험을 관리하는 도구와 관련된 개념
+   : PyTorch에서 모델을 불러오고 여러 실험을 관리하는 도구와 관련된 개념
 4. PyTorch 활용
-  - PyTorch에서 병렬 학습과 학습시 발생할 수 있는 여러 가지 문제점들
+   : PyTorch에서 병렬 학습과 학습시 발생할 수 있는 여러 가지 문제점들
 ---
 # 01. Introduction to PyTorch
 
 ### PyTorch란?
+```
+PyTorch는 딥러닝을 개발하는 가장 기본이 되는 framework이다.
+```
+### Deep Learning Framework 종류
+* mxnet, CNTK, Caffe2, Tensorflow, Keras, PyTorch, theano 등등 엄청 많다!
+* 현재는 Pytorch(facebook), TensorFlow(Google) 두가지가 많이 사용된다
 
+
+### PyTorch vs TensorFlow
+![화면 캡처 2022-01-27 133216](https://user-images.githubusercontent.com/44192730/151292407-1fefd6d4-462e-460a-9158-c36519f2ff69.png)
+
+* PyTorch는 Dynamic Computation Graph, TensorFlow는 Define and run 형식
+ 
+![화면 캡처 2022-01-27 133442](https://user-images.githubusercontent.com/44192730/151292623-eb797195-acfd-4722-ac5a-0510d5e7479a.png)
+
+* g = (x + y) * z (그래프 예시)
+* Define and Run : 그래프를 먼저 정의하고 실행 시점에 데이터를 feed 시켜준다
+* Dynamic Computational Graph, DCG) : 실행을 하면서 그래프를 생성하는 방식
+
+---
+### 참고 자료
+#### 딥러닝 프레임워크
+* https://data-newbie.tistory.com/425
+* https://bit.ly/3j9Vpdg
+
+#### Study more
+* https://wikidocs.net/book/2788
 
