--- a/Week02/01.PyTorch Basic.md
+++ b/Week02/01.PyTorch Basic.md
@@ -29,8 +29,57 @@ PyTorch는 딥러닝을 개발하는 가장 기본이 되는 framework이다.
 * g = (x + y) * z (그래프 예시)
 * Define and Run : 그래프를 먼저 정의하고 실행 시점에 데이터를 feed 시켜준다
 * Dynamic Computational Graph, DCG) : 실행을 하면서 그래프를 생성하는 방식
-
 ---
+# 02. PyTorch Basics
+* Tensor : list, np.ndarray를 사용하여 만들 수 있다, Device를 사용하여 GPU에서 사용도 가능
+* 행렬 곱셈을 dot이 아닌 mm을 사용한다.
+
+* AutoGrad : 자동 미분 지원 -> backward 함수 사용
+---
+# 03. PyTorch 프로젝트 구조 이해
+* DL 프로젝트도 배포를 위해 개발 용이성과 유지보수를 고려해야 한다.
+* 실행, 데이터, 모델, 설정, 로깅, 지표, 유틸리티등 다양한 모듈을 분리하여 프로젝트 템플릿화
+* 실행 : train,py, test.py
+* 설정 : config file
+* data : dataloader
+* model : model.py, metric.py, loss.py
+* storage : log, model status
+* trainer
+* logger
+* utils
+---
+# 04. AutoGrad & Optimizer
+#### torch.nn.Module
+* 딥러닝을 구성하는 layer의 base class
+* input, output, forward, backward를 정의 해주어야 한다
+
+#### nn.Parameter
+* Tensor 객체의 상속 객체
+* nn.Module내에서 autograd의 대상이 된다
+
+#### Backward
+* Layer에 있는 parameter들의 미분을 수행한다
+* forward의 결과와 실제값의 차이에 대해 미분을 수행한다
+* 해당 값으로 Parameter 업데이트
+
+# Dataset, Dataloader
+* 데이터를 넣어주는 기본이 되는 구조
+#### Dataset : 데이터 입력형태를 정의하는 클래스
+* __init__()
+* __len__()
+* __getitem__() : 데이터를 불러올때 어떻게 반환해줄지 정의
+
+#### Transforms : 데이터 전처리
+
+#### DataLoader : 데이터의 batch를 생성해주는 클래스
+* sampler : 데이터를 어떻게 뽑을지 인덱스를 정해주는 기법
+* collate_fn : 
+---
+# 02. PyTorch 구조 학습 (1)
+
+
+
+
 ### 참고 자료
 #### 딥러닝 프레임워크
 * https://data-newbie.tistory.com/425
@@ -38,4 +87,7 @@ PyTorch는 딥러닝을 개발하는 가장 기본이 되는 framework이다.
 
 #### Study more
 * https://wikidocs.net/book/2788
+
+#### 프로젝트 구조
+* https://github.com/victoresque/pytorch-template
 
