--- a/Week02/01.PyTorch Basic.md
+++ b/Week02/01.PyTorch Basic.md
@@ -73,12 +73,36 @@ PyTorch는 딥러닝을 개발하는 가장 기본이 되는 framework이다.
 
 #### DataLoader : 데이터의 batch를 생성해주는 클래스
 * sampler : 데이터를 어떻게 뽑을지 인덱스를 정해주는 기법
-* collate_fn : 
+* collate_fn [https://hulk89.github.io/pytorch/2019/09/30/pytorch_dataset/]
+
 ---
-# 02. PyTorch 구조 학습 (1)
+# 06. 모델 불러오기
 
+#### 모델을 학습하고 형태, 중간 과정을 저장
+#### checkpoint
+* 학습의 중간 결과를 저장하여 최선의 결과를 선택
+* loss, metric값을 지속적으로 확인 저장
 
+### Transfer learing
+* 다른 데이터 셋으로 만든 모델을 현재 데이터에 적용
+* backbone architecture가 잘 학습된 모델에서 일부분만 변경하여 학습을 수행
 
+#### Freezing
+* pretrain model을 활용 시 모델의 일부분을 frozen시킴
+---
+# Monitoring Tool
+#### Tensorboard vs wandb
+* wandb를 더 연습해보자
+
+# Hyperparameter tuning
+* 모델 스스로 학습하지 않는 값, 사람이 지정
+* 조금의 0.01의 성능이라도 올려야 하는 경우에 도전할 만
+
+### Ray
+* multi-node multi processing 지원 모듈
+* ML/DL 병렬처리를 도와주는 모듈
+
+---
 
 ### 참고 자료
 #### 딥러닝 프레임워크
